fix: improve match listing, discovery feed and filtering
